# QRiNG

./: .gitignore  AUDIT-2026-04-14.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Code/: README.md  emulatorQRiNG.py  exampleAnimation.py  exampleStatic.py  originalQRiNG.sol  simulatorQRiNG.py  visualizationQRiNG.py
Plots/: README.md
contracts/: originalQRiNG.sol
examples/: exampleAnimation.py  exampleEmulation.py  exampleSimulation.py  exampleStatic.py
qring/: __init__.py  emulator.py  simulator.py  visualization.py
tests/: test_emulator.py  test_simulator.py
