[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qring"
version = "0.1.0"
description = "Quantum Random Number Generator protocol combining QKD with blockchain consensus"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jeffrey Morais"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["quantum", "random-number-generator", "qkd", "blockchain", "ethereum", "qiskit"]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "seaborn>=0.12.0",
    "pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/btq-ag/QRiNG"
Repository = "https://github.com/btq-ag/QRiNG"
Issues = "https://github.com/btq-ag/QRiNG/issues"

[project.optional-dependencies]
quantum = [
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
]

[project.scripts]
qring-simulate = "qring.simulator:runSimulationAndCreateVisualizations"
qring-emulate = "qring.emulator:runEmulationDemo"
qring-visualize = "qring.visualization:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["qring*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
